add index.css to index.html
linked the css file to html file.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
       <title>Tic-Tac-Toe</title>
 
+      <link rel="stylesheet" type="text/css" href="index.css">
       <script src="vendor.bundle.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
       <link href="https://fonts.googleapis.com/css?family=Tillana" rel="stylesheet">
