added grid for gameboard
added a grid for the gameboard.

--- a/index.html
+++ b/index.html
@@ -47,22 +47,31 @@
       </nav>
       <!-- NAVBAR -->
       <!-- GAMEBOARD -->
-      <div class="row">
-        <div class=".col-xs-4"></div>
-        <div class=".col-xs-4"></div>
-        <div class=".col-xs-4"></div>
-      </div>
-      <div class="row">
-        <div class=".col-xs-4"></div>
-        <div class=".col-xs-4"></div>
-        <div class=".col-xs-4"></div>
-      </div>
-      <div class="row">
-        <div class=".col-xs-4"></div>
-        <div class=".col-xs-4"></div>
-        <div class=".col-xs-4"></div>
+      <div class="container gameboard">
+        <div class="row row0">
+          <div class="col-xs-3 square"></div>
+          <div class="col-xs-3 square"></div>
+          <div class="col-xs-3 square"></div>
+        </div>
+        <div class="row row1">
+          <div class="col-xs-3 square"></div>
+          <div class="col-xs-3 square"></div>
+          <div class="col-xs-3 square"></div>
+        </div>
+        <div class="row row2">
+          <div class="col-xs-3 square"></div>
+          <div class="col-xs-3 square"></div>
+          <div class="col-xs-3 square"></div>
+        </div>
       </div>
       <!-- GAMEBOARD -->
+      <!-- FOOTER -->
+      <div class="footer">
+        <p>
+          David Powell
+        </p>
+      </div>
+      <!-- FOOTER -->
 
     </body>
 </html>
