--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" id="sign-up-submit">Submit</button>
+                <button type="submit" class="btn btn-primary" id="sign-up-submit">Submit</button>
               </div>
             </div><!-- /.modal-content -->
           </div><!-- /.modal-dialog -->
