add on click images, add array to hold moves
clicking on tiles now adds an img for x or o. And adds the move
to an array to store moves.

--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
       <!-- GAMEBOARD -->
       <div class="container gameboard">
         <div class="row">
-          <div class="col-xs-3 square"></div>
-          <div class="col-xs-3 square"></div>
-          <div class="col-xs-3 square"></div>
+          <div id="tileZero" class="col-xs-3 square" data-square="0"></div>
+          <div id="tileOne" class="col-xs-3 square" data-square="1"></div>
+          <div id="tileTwo" class="col-xs-3 square" data-square="2"></div>
         </div>
         <div class="row">
-          <div class="col-xs-3 square"></div>
-          <div class="col-xs-3 square"></div>
-          <div class="col-xs-3 square"></div>
+          <div id="tileThree" class="col-xs-3 square" data-square="3"></div>
+          <div id="tileFour" class="col-xs-3 square" data-square="4"></div>
+          <div id="tileFive" class="col-xs-3 square" data-square="5"></div>
         </div>
         <div class="row">
-          <div class="col-xs-3 square"></div>
-          <div class="col-xs-3 square"></div>
-          <div class="col-xs-3 square"></div>
+          <div id="tileSix" class="col-xs-3 square" data-square="6"></div>
+          <div id="tileSeven" class="col-xs-3 square" data-square="7"></div>
+          <div id="tileEight" class="col-xs-3 square" data-square="8"></div>
         </div>
       </div>
       <!-- GAMEBOARD -->
