--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </p>
       </div>
       <!-- FOOTER -->
-      <!-- MODAL -->
+      <!-- MODALS -->
         <!-- Sign Up -->
         <div id="sign-up-modal" class="modal fade" tabindex="-1" role="dialog">
           <div class="modal-dialog" role="document">
@@ -160,6 +160,24 @@
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-primary" id="change-password-submit">Submit</button>
+              </div>
+            </div><!-- /.modal-content -->
+          </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+
+        <!-- Display Winner -->
+        <div id="display-winner-modal" class="modal fade" tabindex="-1" role="dialog">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Congragulations!!!</h4>
+              </div>
+              <div id="winner-body" class="modal-body">
+                <!-- insert winner with jQuery -->
+              </div>
+              <div class="modal-footer">
+                <button type="submit" class="btn btn-primary" id="display-winner-ok">OK</button>
               </div>
             </div><!-- /.modal-content -->
           </div><!-- /.modal-dialog -->
