--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <ul class="dropdown-menu">
                   <li id="change-password"><a href="#">Change Password</a></li>
                   <li id="new-game"><a href="#">New Game</a></li>
+                  <li id="load-game"><a href="#">Load Games</a></li>
                   <li id="clear-board"><a href="#">Clear Board</a></li>
                   <li role="separator" class="divider"></li>
                   <li id="log-out"><a href="#">Log Out</a></li>
@@ -178,6 +179,30 @@
               </div>
               <div class="modal-footer">
                 <button type="submit" class="btn btn-primary" id="display-winner-ok">OK</button>
+              </div>
+            </div><!-- /.modal-content -->
+          </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+
+        <!-- Load Game  -->
+        <div id="load-game-modal" class="modal fade" tabindex="-1" role="dialog">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Load Game</h4>
+              </div>
+              <div class="modal-body">
+                <!-- game id -->
+                <div class="input-group">
+                  <span class="input-group-addon">Game Id</span>
+                  <input type="text" class="form-control"  id="load-game-id" placeholder="game id" aria-describedby="basic-addon1">
+                </div>
+                <!-- End input fields -->
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="load-game-submit">Submit</button>
               </div>
             </div><!-- /.modal-content -->
           </div><!-- /.modal-dialog -->
