change the way we closed squares after click
used data-closed instead of .off

--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
       <!-- GAMEBOARD -->
       <div class="container gameboard">
         <div class="row">
-          <div id="tileZero" class="col-xs-3 square" data-square="0"></div>
-          <div id="tileOne" class="col-xs-3 square" data-square="1"></div>
-          <div id="tileTwo" class="col-xs-3 square" data-square="2"></div>
+          <div id="tileZero" class="col-xs-3 square" data-square="0" data-closed="1"></div>
+          <div id="tileOne" class="col-xs-3 square" data-square="1" data-closed="1"></div>
+          <div id="tileTwo" class="col-xs-3 square" data-square="2" data-closed="1"></div>
         </div>
         <div class="row">
-          <div id="tileThree" class="col-xs-3 square" data-square="3"></div>
-          <div id="tileFour" class="col-xs-3 square" data-square="4"></div>
-          <div id="tileFive" class="col-xs-3 square" data-square="5"></div>
+          <div id="tileThree" class="col-xs-3 square" data-square="3" data-closed="1"></div>
+          <div id="tileFour" class="col-xs-3 square" data-square="4" data-closed="1"></div>
+          <div id="tileFive" class="col-xs-3 square" data-square="5" data-closed="1"></div>
         </div>
         <div class="row">
-          <div id="tileSix" class="col-xs-3 square" data-square="6"></div>
-          <div id="tileSeven" class="col-xs-3 square" data-square="7"></div>
-          <div id="tileEight" class="col-xs-3 square" data-square="8"></div>
+          <div id="tileSix" class="col-xs-3 square" data-square="6" data-closed="1"></div>
+          <div id="tileSeven" class="col-xs-3 square" data-square="7" data-closed="1"></div>
+          <div id="tileEight" class="col-xs-3 square" data-square="8" data-closed="1"></div>
         </div>
       </div>
       <!-- GAMEBOARD -->
