made the gameboard sqaure and made the images square.
stuff.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!-- Things to change in the future:
+  -move the buttons related to gameplay out of the dropdown and just have them on the nav bar.
+  -and indicator that I need to click on new game to start a game (maybe instructions or board-cover).
+  -add a start new game button to the win screen.
+  -various bux fixes related to clear board and new game.
+ -->
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -51,19 +58,19 @@
       <!-- GAMEBOARD -->
       <div class="container gameboard">
         <div class="row">
-          <div id="tileZero" class="col-xs-3 square" data-square="0" data-closed="1"></div>
-          <div id="tileOne" class="col-xs-3 square" data-square="1" data-closed="1"></div>
-          <div id="tileTwo" class="col-xs-3 square" data-square="2" data-closed="1"></div>
+          <div id="tileZero" class="col-xs-4 square" data-square="0" data-closed="1"></div>
+          <div id="tileOne" class="col-xs-4 square" data-square="1" data-closed="1"></div>
+          <div id="tileTwo" class="col-xs-4 square" data-square="2" data-closed="1"></div>
         </div>
         <div class="row">
-          <div id="tileThree" class="col-xs-3 square" data-square="3" data-closed="1"></div>
-          <div id="tileFour" class="col-xs-3 square" data-square="4" data-closed="1"></div>
-          <div id="tileFive" class="col-xs-3 square" data-square="5" data-closed="1"></div>
+          <div id="tileThree" class="col-xs-4 square" data-square="3" data-closed="1"></div>
+          <div id="tileFour" class="col-xs-4 square" data-square="4" data-closed="1"></div>
+          <div id="tileFive" class="col-xs-4 square" data-square="5" data-closed="1"></div>
         </div>
         <div class="row">
-          <div id="tileSix" class="col-xs-3 square" data-square="6" data-closed="1"></div>
-          <div id="tileSeven" class="col-xs-3 square" data-square="7" data-closed="1"></div>
-          <div id="tileEight" class="col-xs-3 square" data-square="8" data-closed="1"></div>
+          <div id="tileSix" class="col-xs-4 square" data-square="6" data-closed="1"></div>
+          <div id="tileSeven" class="col-xs-4 square" data-square="7" data-closed="1"></div>
+          <div id="tileEight" class="col-xs-4 square" data-square="8" data-closed="1"></div>
         </div>
       </div>
       <!-- GAMEBOARD -->
