comment buggy code and password fields
commented out the buggy load game button, and changed password fields
to type password.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <ul class="dropdown-menu">
                   <li id="change-password"><a href="#">Change Password</a></li>
                   <li id="new-game"><a href="#">New Game</a></li>
-                  <li id="load-game"><a href="#">Load Game</a></li>
+                  <!-- <li id="load-game"><a href="#">Load Game</a></li> -->
                   <li id="see-all-games"><a href="#">See All Games</a></li>
                   <li id="clear-board"><a href="#">Clear Board</a></li>
                   <li role="separator" class="divider"></li>
@@ -92,12 +92,12 @@
                 <!-- Password -->
                 <div class="input-group">
                   <span class="input-group-addon">Password</span>
-                  <input type="text" class="form-control"  id="sign-up-password" placeholder="Password" aria-describedby="basic-addon1">
+                  <input type="password" class="form-control"  id="sign-up-password" placeholder="Password" aria-describedby="basic-addon1">
                 </div>
                 <!-- Confirm Password -->
                 <div class="input-group">
                   <span class="input-group-addon">Confirm Password</span>
-                  <input type="text" class="form-control"  id="sign-up-confirm-password" placeholder="Confirm Password" aria-describedby="basic-addon1">
+                  <input type="password" class="form-control"  id="sign-up-confirm-password" placeholder="Confirm Password" aria-describedby="basic-addon1">
                 </div>
                 <!-- End input fields -->
               </div>
@@ -126,7 +126,7 @@
                 <!-- Password -->
                 <div class="input-group">
                   <span class="input-group-addon">Password</span>
-                  <input type="text" class="form-control"  id="log-in-password" placeholder="Password" aria-describedby="basic-addon1">
+                  <input type="password" class="form-control"  id="log-in-password" placeholder="Password" aria-describedby="basic-addon1">
                 </div>
                 <!-- End input fields -->
               </div>
@@ -150,12 +150,12 @@
                 <!-- Current password -->
                 <div class="input-group">
                   <span class="input-group-addon">Current Password</span>
-                  <input type="text" class="form-control"  id="current-password" placeholder="Current Password" aria-describedby="basic-addon1">
+                  <input type="password" class="form-control"  id="current-password" placeholder="Current Password" aria-describedby="basic-addon1">
                 </div>
                 <!-- New Password -->
                 <div class="input-group">
                   <span class="input-group-addon">New Password</span>
-                  <input type="text" class="form-control"  id="new-password" placeholder="New Password" aria-describedby="basic-addon1">
+                  <input type="password" class="form-control"  id="new-password" placeholder="New Password" aria-describedby="basic-addon1">
                 </div>
                 <!-- End input fields -->
               </div>
