add new images, changed color
added new x and o images, changed background to purple, changed
grid to dashed lines, removed outside edge. Changed artist credit.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           Site created by David Powell
         </p>
         <p>
-          Artwork created by OMOCAT
+          Artwork created by TS
         </p>
       </div>
       <!-- FOOTER -->
