fix title of page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Tic-Tac-Toe jalf;jei</title>
+      <title>Tic-Tac-Toe</title>
 
       <link rel="stylesheet" type="text/css" href="./assets/styles/index.scss">
       <script src="vendor.bundle.js" type="text/javascript" charset="utf-8" defer></script>
